# hayami

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: basic.rs  comparison.rs
benches/comparison/: main.rs  old.rs
benchmarks/: Cargo.toml
benchmarks/benches/comparison/: main.rs
benchmarks/src/: lib.rs  old.rs
hayami/: CHANGELOG.md  Cargo.toml
hayami-im/: Cargo.toml
hayami-im-rc/: CHANGELOG.md  Cargo.toml
hayami-im-rc/src/: lib.rs
hayami-im/src/: lib.rs
hayami/benches/comparison/: main.rs
hayami/src/: lib.rs  local.rs
src/: fast.rs  lib.rs  local.rs  snap.rs  testing.rs
symbolmap-trait/: CHANGELOG.md  Cargo.toml
symbolmap-trait/src/: lib.rs  testing.rs
