[package]
name = "hayami"
version = "0.1.1"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://gitlab.com/rain-lang/hayami"
description = "A simple, general use symbol table."
keywords = ["data-structure"]
categories = ["data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "^0.3"
indexmap = "^1.3.2"

[dev-dependencies]
pretty_assertions = "^0.6"
rand = "^0.7"
criterion = "^0.3"
