[package]
name = "hayami"
version = "0.2.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://gitlab.com/rain-lang/hayami"
description = "A simple, general use symbol table."
keywords = ["data-structure"]
categories = ["data-structures"]

[dependencies]
ahash = "^0.3"
im = "^15"
im-rc = "^15"
indexmap = "^1.3.2"

[dev-dependencies]
pretty_assertions = "^0.6"
rand = "^0.7"
criterion = "^0.3"
fxhash = "^0.2"

[[bench]]
name = "comparison"
path = "benches/comparison/main.rs"
harness = false