[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "^0.3"
im = "^15"
im-rc = "^15"
indexmap = "^1.3.2"
elysees = "^0.2"
symbolmap-trait = "0.1"
pretty_assertions = "^0.6"
rand = "^0.7"
criterion = "^0.3"
fxhash = "^0.2"
hayami = "^0.2.1"

[[bench]]
name = "comparison"
path = "benches/comparison/main.rs"
harness = false