[package]
name = "hayami-im-rc"
version = "0.1.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://gitlab.com/rain-lang/hayami"
description = "A simple, general use symbol table."
keywords = ["data-structure"]
categories = ["data-structures"]

[dependencies]
ahash = "^0.3"
im-rc = "^15"
symbolmap-trait = "^0.1.1"

[dev-dependencies]
symbolmap-trait = { version = "^0.1.1", features = [ "testing" ] }

[features]
default = ["pool"]
pool = ["im-rc/pool"]