[package]
name = "hayami-im"
version = "0.1.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "^0.3"
im = "^15"
elysees = { version = "^0.2", optional = true }
symbolmap-trait = "0.1"

[features]
default = [ "elysees" ]