[package]
name = "hayami"
version = "0.3.1"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://gitlab.com/rain-lang/hayami"
description = "A simple, general use symbol table."
keywords = ["data-structure"]
categories = ["data-structures"]

[dependencies]
ahash = "^0.3"
indexmap = "^1.3.2"
symbolmap-trait = "^0.1.1"